--- a/app/dashboard/dashboard.html
+++ b/app/dashboard/dashboard.html
@@ -1,1 +1,9 @@
 <h1>Welcome User!</h1>
+
+<div class="row">
+  <div class="col-xs-8 col-sm-9">
+    <esri-map id="map" center="map.center" zoom="map.zoom" basemap="topo" map-options="map.mapOptions">
+
+    </esri-map>
+  </div>
+</div>
