--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="app.css">
   <link rel="stylesheet" type="text/css" href="https://js.arcgis.com/3.21/esri/css/esri.css">
-  <link rel="stylesheet" href="https://unpkg.com/calcite-bootstrap@0.3.4/dist/css/calcite-bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://unpkg.com/calcite-bootstrap@0.3.4/dist/css/calcite-bootstrap.min.css"> -->
   <script src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js">
   </script>
 </head>
