--- a/app/dashboard/dashboard.html
+++ b/app/dashboard/dashboard.html
@@ -1,3 +1,13 @@
+<head>
+  <link rel="stylesheet" href="https://js.arcgis.com/3.39/dijit/themes/claro/claro.css">
+    <link rel="stylesheet" href="https://js.arcgis.com/3.39/esri/css/esri.css">
+    <style>
+      #map {
+        height: 600px;
+      }
+      </style>
+</head>
+
 <h1>Welcome User!</h1>
 
 <div class="row">
