Added users differentiation

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,8 @@
   <script src="app.js"></script>
   <script src="login/login.js"></script>
   <script src="signup/signup.js"></script>
-  <script src="dashboard/dashboard.js"></script>
+  <script src="dashboardtrans/dashboardtrans.js"></script>
+  <script src="dashboardexp/dashboardexp.js"></script>
   <script src="core/version/version.js"></script>
   <script src="core/version/version-directive.js"></script>
   <script src="core/version/interpolate-filter.js"></script>
