--- a/app/dashboardtrans/dashboardtrans.html
+++ b/app/dashboardtrans/dashboardtrans.html
@@ -8,7 +8,7 @@
       </style>
 </head>
 
-<h1>Welcome User!</h1>
+<h1>Welcome Transportator!</h1>
 
 <div class="row">
   <div class="col-xs-8 col-sm-9">
