--- a/app/dashboardexp/dashboardexp.html
+++ b/app/dashboardexp/dashboardexp.html
@@ -8,7 +8,7 @@
         </style>
   </head>
   
-  <h1>Welcome Expeditor!</h1>
+  <h1>Welcome to Expeditor Home!</h1>
   
   <div class="row">
     <div class="col-xs-8 col-sm-9">
