--- a/app/dashboardtrans/dashboardtrans.html
+++ b/app/dashboardtrans/dashboardtrans.html
@@ -1,19 +1,15 @@
 <head>
-  <link rel="stylesheet" href="https://js.arcgis.com/3.39/dijit/themes/claro/claro.css">
-    <link rel="stylesheet" href="https://js.arcgis.com/3.39/esri/css/esri.css">
-    <style>
-      #map {
-        height: 600px;
-      }
-      </style>
+    <link rel="stylesheet" type="text/css" href="dashboardtrans/dashboardtrans.css">
 </head>
-
-<h1>Welcome Transportator!</h1>
-
-<div class="row">
-  <div class="col-xs-8 col-sm-9">
-    <esri-map id="map" center="map.center" zoom="map.zoom" basemap="topo" map-options="map.mapOptions">
-
-    </esri-map>
-  </div>
-</div>
+<header>
+    <div class="container">
+        <h3 class="logo">Bine ati venit!</h3>
+        <nav>
+            <ul>
+                <li><a ng-click="hartaTransClick()">Harta</a></li>
+                <li><a ng-click="oferteTransClick()">Ofertele mele</a></li>
+                <li><a href="#">Logout</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
