--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,8 @@
   <script src="signup/signup.js"></script>
   <script src="dashboardtrans/dashboardtrans.js"></script>
   <script src="dashboardexp/dashboardexp.js"></script>
+  <script src="dashboardtrans/harta/harta.js"></script>
+  <script src="dashboardtrans/oferte/oferte.js"></script>
   <script src="core/version/version.js"></script>
   <script src="core/version/version-directive.js"></script>
   <script src="core/version/interpolate-filter.js"></script>
