Add offers, trucks and requests list pages for transportator

--- a/app/dashboardtrans/dashboardtrans.html
+++ b/app/dashboardtrans/dashboardtrans.html
@@ -7,7 +7,9 @@
         <nav>
             <ul>
                 <li><a ng-click="hartaTransClick()">Harta</a></li>
+                <li><a ng-click="cereriClientiTransClick()">Cereri</a></li>
                 <li><a ng-click="oferteTransClick()">Ofertele mele</a></li>
+                <li><a ng-click="camioaneTransClick()">Camioanele mele</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
         </nav>
