--- a/app/dashboardtrans/dashboardtrans.html
+++ b/app/dashboardtrans/dashboardtrans.html
@@ -1,6 +1,53 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="dashboardtrans/dashboardtrans.css">
+
+<meta name="viewport" content="width=device-width, initial-scale=1"> 
+<style>
+* {box-sizing: border-box;}
+
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+</style>
+<link rel="stylesheet" type="text/css" href="dashboardtrans/dashboardtrans.css">
 </head>
+
 <header>
     <div class="container">
         <h3 class="logo">Bine ati venit!</h3>
@@ -15,3 +62,33 @@
         </nav>
     </div>
 </header>
+
+<body>
+    <div class="slideshow-container">
+
+    <div class="mySlides fade">
+    <img src="../assets/img/image1.jpg" style="width:100%; margin-top: 25px;">
+    </div>
+
+    <div class="mySlides fade">
+    <img src="../assets/img/image2.jpg" style="width:100%; margin-top: 25px;">
+    </div>
+
+    <div class="mySlides fade">
+    <img src="../assets/img/image3.jpg" style="width:100%; margin-top: 25px;">
+    </div>
+
+    <div class="mySlides fade">
+    <img src="../assets/img/image4.jpg" style="width:100%; margin-top: 25px;">
+    </div>
+
+    </div>
+    <br>
+
+    <div style="text-align:center">
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    </div>
+</body>
