--- a/app/dashboardexp/dashboardexp.html
+++ b/app/dashboardexp/dashboardexp.html
@@ -7,8 +7,8 @@
         }
         </style>
   </head> -->
-  
-  <head>
+
+<head>
     <link rel="stylesheet" type="text/css" href="dashboardexp/dashboardexp.css">
 </head>
 <header>
@@ -16,7 +16,7 @@
         <h3 class="logo">Bine ati venit!</h3>
         <nav>
             <ul>
-                <li><a ng-click="hartaExpClick()">Harta</a></li>
+                <li><a href="http://localhost:7000/">Harta</a></li>
                 <li><a ng-click="cerereNouaClick()">Cerere noua</a></li>
                 <li><a ng-click="cereriExpClick()">Cereri</a></li>
                 <li><a href="#">Logout</a></li>
@@ -24,13 +24,13 @@
         </nav>
     </div>
 </header>
-  
-  <!-- <h1>Welcome to Expeditor Home!</h1>
-  
+
+<!-- <h1>Welcome to Expeditor Home!</h1>
+
   <div class="row">
     <div class="col-xs-8 col-sm-9">
       <esri-map id="map" center="map.center" zoom="map.zoom" basemap="topo" map-options="map.mapOptions">
-  
+
       </esri-map>
     </div>
   </div> -->
