--- a/app/dashboardtrans/dashboardtrans.html
+++ b/app/dashboardtrans/dashboardtrans.html
@@ -1,51 +1,67 @@
 <head>
 
-<meta name="viewport" content="width=device-width, initial-scale=1"> 
-<style>
-* {box-sizing: border-box;}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
 
-.mySlides {display: none;}
-img {vertical-align: middle;}
+        .mySlides {
+            display: none;
+        }
 
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
+        img {
+            vertical-align: middle;
+        }
 
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
+        .slideshow-container {
+            max-width: 1000px;
+            position: relative;
+            margin: auto;
+        }
 
-.active {
-  background-color: #717171;
-}
+        .dot {
+            height: 15px;
+            width: 15px;
+            margin: 0 2px;
+            background-color: #bbb;
+            border-radius: 50%;
+            display: inline-block;
+            transition: background-color 0.6s ease;
+        }
 
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
+        .active {
+            background-color: #717171;
+        }
 
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
+        .fade {
+            -webkit-animation-name: fade;
+            -webkit-animation-duration: 1.5s;
+            animation-name: fade;
+            animation-duration: 1.5s;
+        }
 
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
+        @-webkit-keyframes fade {
+            from {
+                opacity: .4
+            }
 
-</style>
-<link rel="stylesheet" type="text/css" href="dashboardtrans/dashboardtrans.css">
+            to {
+                opacity: 1
+            }
+        }
+
+        @keyframes fade {
+            from {
+                opacity: .4
+            }
+
+            to {
+                opacity: 1
+            }
+        }
+    </style>
+    <link rel="stylesheet" type="text/css" href="dashboardtrans/dashboardtrans.css">
 </head>
 
 <header>
@@ -53,7 +69,8 @@ img {vertical-align: middle;}
         <h3 class="logo">Bine ati venit!</h3>
         <nav>
             <ul>
-                <li><a ng-click="hartaTransClick()">Harta</a></li>
+                <!-- <li><a ng-click="hartaTransClick()">Harta</a></li> -->
+                <li><a href="http://localhost:7000/">Harta</a></li>
                 <li><a ng-click="cereriClientiTransClick()">Cereri</a></li>
                 <li><a ng-click="oferteTransClick()">Ofertele mele</a></li>
                 <li><a ng-click="camioaneTransClick()">Camioanele mele</a></li>
@@ -66,29 +83,29 @@ img {vertical-align: middle;}
 <body>
     <div class="slideshow-container">
 
-    <div class="mySlides fade">
-    <img src="../assets/img/image1.jpg" style="width:100%; margin-top: 25px;">
-    </div>
+        <div class="mySlides fade">
+            <img src="../assets/img/image1.jpg" style="width:100%; margin-top: 25px;">
+        </div>
 
-    <div class="mySlides fade">
-    <img src="../assets/img/image2.jpg" style="width:100%; margin-top: 25px;">
-    </div>
+        <div class="mySlides fade">
+            <img src="../assets/img/image2.jpg" style="width:100%; margin-top: 25px;">
+        </div>
 
-    <div class="mySlides fade">
-    <img src="../assets/img/image3.jpg" style="width:100%; margin-top: 25px;">
-    </div>
+        <div class="mySlides fade">
+            <img src="../assets/img/image3.jpg" style="width:100%; margin-top: 25px;">
+        </div>
 
-    <div class="mySlides fade">
-    <img src="../assets/img/image4.jpg" style="width:100%; margin-top: 25px;">
-    </div>
+        <div class="mySlides fade">
+            <img src="../assets/img/image4.jpg" style="width:100%; margin-top: 25px;">
+        </div>
 
     </div>
     <br>
 
     <div style="text-align:center">
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
     </div>
 </body>
