fix different bugs

--- a/app/dashboardtrans/listacereri/listacereri.html
+++ b/app/dashboardtrans/listacereri/listacereri.html
@@ -45,7 +45,7 @@
                 <td>{{entry.data_max_sosirii}}</td>
                 <td>{{entry.locul_sosirii}}</td>
                 <td>{{entry.buget}}</td>
-                <td><button type="button">Preluare marfa</button></td>
+                <td><button ng-click="preluareMarfaTrans($index)"><strong>Preluare Marfa</strong></button></td>
             </tbody>
         </table>
     </div>
