--- a/app/dashboardexp/cererilemele/cererilemele.html
+++ b/app/dashboardexp/cererilemele/cererilemele.html
@@ -37,17 +37,17 @@
                     <th>Buget</th>
                 </tr>
             </thead>
-            <tbody ng-repeat="entry in trucksData">
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+            <tbody ng-repeat="entry in cereriData">
+                <td>{{entry.tip_marfa}}</td>
+                <td>{{entry.masa}}</td>
+                <td>{{entry.volum}}</td>
+                <td>{{entry.data_plecarii}}</td>
+                <td>{{entry.data_max_plecarii}}</td>
+                <td>{{entry.locul_plecarii}}</td>
+                <td>{{entry.data_sosirii}}</td>
+                <td>{{entry.data_max_sosirii}}</td>
+                <td>{{entry.locul_sosirii}}</td>
+                <td>{{entry.buget}}</td>
             </tbody>
         </table>
 
