--- a/app/dashboardexp/dashboardexp.html
+++ b/app/dashboardexp/dashboardexp.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="http://localhost:7000/">Harta</a></li>
-                <li><a ng-click="cerereNouaClick()">Cerere noua</a></li>
+                <li><a ng-click="oferteClick()">Oferte</a></li>
                 <li><a ng-click="cereriExpClick()">Cereri</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
