--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,8 @@
   <script src="dashboardexp/cereri/cereri.js"></script>
   <script src="dashboardexp/success/success.js"></script>
   <script src="dashboardexp/cererilemele/cererilemele.js"></script>
+  <script src="dashboardexp/oferte/oferte.js"></script>
+
   <script src="dashboardtrans/harta/harta.js"></script>
   <script src="dashboardtrans/oferte/oferte.js"></script>
   <script src="dashboardtrans/camioane/camioane.js"></script>
