--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
   <script src="app.js"></script>
   <script src="login/login.js"></script>
   <script src="signup/signup.js"></script>
+  <script src="dashboardadmin/dashboardadmin.js"></script>
   <script src="dashboardtrans/dashboardtrans.js"></script>
   <script src="dashboardexp/dashboardexp.js"></script>
   <script src="dashboardexp/harta/harta.js"></script>
@@ -42,6 +43,9 @@
   <script src="dashboardtrans/oferte/oferte.js"></script>
   <script src="dashboardtrans/camioane/camioane.js"></script>
   <script src="dashboardtrans/listacereri/listacereri.js"></script>
+
+  <script src="dashboardadmin/conturi/conturi.js"></script>
+
   <script src="core/version/version.js"></script>
   <script src="core/version/version-directive.js"></script>
   <script src="core/version/interpolate-filter.js"></script>
