Added add new user modal

--- a/app/dashboardadmin/conturi/conturi.html
+++ b/app/dashboardadmin/conturi/conturi.html
@@ -46,7 +46,7 @@
 
 
     </div>
-    <!-- <div class="modal-addUser" ng-controller="ConturiCtrl">
+    <div class="modal-addUser" ng-controller="ConturiCtrl">
         <button type="button" id="addUser" name="addUser" ng-click="openModalUser()">Adauga utilizator</button>
-    </div> -->
+    </div>
 </body>
