Add contracts logic

--- a/app/dashboardtrans/camioane/camioane.html
+++ b/app/dashboardtrans/camioane/camioane.html
@@ -22,11 +22,11 @@
             <thead>
                 <tr>
                     <th>Numar inmatriculare</th>
-                    <th>Volum</th>
-                    <th>Latime</th>
-                    <th>Lungime</th>
-                    <th>Inaltime</th>
-                    <th>Greutate</th>
+                    <th>Volum (m<sup>3</sup>)</th>
+                    <th>Latime (m)</th>
+                    <th>Lungime (m)</th>
+                    <th>Inaltime (m)</th>
+                    <th>Greutate (tone)</th>
                 </tr>
             </thead>
             <tbody ng-repeat="entry in trucksData">
