--- a/app/dashboardtrans/dashboardtrans.html
+++ b/app/dashboardtrans/dashboardtrans.html
@@ -72,6 +72,7 @@
                 <!-- <li><a ng-click="hartaTransClick()">Harta</a></li> -->
                 <li><a href="http://localhost:7000/">Harta</a></li>
                 <li><a ng-click="cereriClientiTransClick()">Cereri</a></li>
+                <li><a ng-click="contracteTransClick()">Contracte</a></li>
                 <li><a ng-click="oferteTransClick()">Ofertele mele</a></li>
                 <li><a ng-click="camioaneTransClick()">Camioanele mele</a></li>
                 <li><a href="#">Logout</a></li>
