--- a/app/dashboardtrans/oferte/oferte.html
+++ b/app/dashboardtrans/oferte/oferte.html
@@ -27,10 +27,10 @@
                     <th>Data sosirii</th>
                     <th>Locul sosirii</th>
                     <th>Dimensiuni (L x l x h)</th>
-                    <th>Volum</th>
-                    <th>Greutate</th>
-                    <th>Pret km gol</th>
-                    <th>Pret km incarcat</th>
+                    <th>Volum (m<sup>3</sup>)</th>
+                    <th>Greutate (tone)</th>
+                    <th>Pret km gol (RON)</th>
+                    <th>Pret km incarcat (RON)</th>
                 </tr>
             </thead>
             <tbody ng-repeat="entry in offersData">
