--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,8 @@
   <script src="dashboardtrans/oferte/oferte.js"></script>
   <script src="dashboardtrans/camioane/camioane.js"></script>
   <script src="dashboardtrans/listacereri/listacereri.js"></script>
+  <script src="dashboardtrans/contractetrans/contractetrans.js"></script>
+  <script src="dashboardtrans/contractincheiat/contractincheiat.js"></script>
   <script src="core/version/version.js"></script>
   <script src="core/version/version-directive.js"></script>
   <script src="core/version/interpolate-filter.js"></script>
