Added contract generation

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,8 @@
   <script src="dashboardexp/success/success.js"></script>
   <script src="dashboardexp/cererilemele/cererilemele.js"></script>
   <script src="dashboardexp/oferte/oferte.js"></script>
+  <script src="dashboardexp/contractincheiat/contractincheiat.js"></script>
+
 
   <script src="dashboardtrans/harta/harta.js"></script>
   <script src="dashboardtrans/oferte/oferte.js"></script>
