--- a/app/dashboardexp/cererilemele/cererilemele.html
+++ b/app/dashboardexp/cererilemele/cererilemele.html
@@ -25,6 +25,7 @@
         <table>
             <thead>
                 <tr>
+                    <th>ID Cerere</th>
                     <th>Tip marfa</th>
                     <th>Masa</th>
                     <th>Volum</th>
@@ -39,6 +40,7 @@
                 </tr>
             </thead>
             <tbody ng-repeat="entry in cereriData">
+                <td>{{entry.cerereID}}</td>
                 <td>{{entry.tip_marfa}}</td>
                 <td>{{entry.masa}}</td>
                 <td>{{entry.volum}}</td>
