Delete map from admin dashboard

--- a/app/dashboardadmin/dashboardadmin.html
+++ b/app/dashboardadmin/dashboardadmin.html
@@ -70,7 +70,7 @@
         <nav>
             <ul>
                 <!-- <li><a ng-click="hartaTransClick()">Harta</a></li> -->
-                <li><a href="http://localhost:7000/">Harta</a></li>
+                <!-- <li><a href="http://localhost:7000/">Harta</a></li> -->
                 <li><a ng-click="conturiUtilizatoriClick()">Conturi utilizatori</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
