--- a/app/dashboardadmin/conturi/conturi.html
+++ b/app/dashboardadmin/conturi/conturi.html
@@ -7,7 +7,7 @@
 
 <header>
     <div class="container">
-        <h3 class="logo">Cererile mele</h3>
+        <h3 class="logo">Conturile utilizatorilor</h3>
         <nav>
             <ul>
                 <li><a ng-click="homeClick()">Home</a></li>
